# ai_agents_data_api

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.celerybeat  Dockerfile.flower  LICENSE  PLAN.md  README.md  TODO.md  docker-compose.yml  instructions.md  plan.md  pyproject.toml  requirements.txt  sync-strategy.md
DOCS/: INSTRUCTIONS.md  SYNC-STEPS.md  TODO.md
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: admin.py  artifacts.py  auth.py  data.py  queries.py  sync.py  tasks.py
app/core/: auth.py  celery.py  config.py
app/db/: duckdb.py  init.py  snowflake.py
app/schemas/: admin.py  artifacts.py  data.py  queries.py  sync.py
app/services/: admin.py  artifacts.py  data.py  queries.py  sync.py
app/tasks/: celery_app.py  cleanup.py  queries.py  sync.py
data/: local.db
scripts/: test_deploy.sh
