[tool.poetry]
name = "ai_agents_data_api"
version = "0.1.0"
description = "AI Agents Data API"
authors = ["Petr Padak"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.11.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
snowflake-connector-python = "^3.12.4"
pandas = "^2.2.3"
redis = "^5.2.1"
celery = "^5.3.6"
flower = "^2.0.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.14.1"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 